2006/02/18  ***** v2.1.1 shipped *****

2006/02/18  fadden
    - Correct a wayward assert.  (Changing the filetype of a file from an
      HFS disk, which has zero-length data fork, falsely triggered the
      assert.)

2005/09/17  ***** v2.1.0 shipped *****

2005/09/17  fadden
    - Added "kNuValIgnoreLZW2Len" flag, which enables NuLib2 to handle
      archives created by an unknown but badly broken program.
    - Fixed build for gcc v4.0.

2004/10/11  ***** v2.0.3 shipped *****

2004/09/25  fadden
    - Fixed: attempting to add files after deleting *all* entries in an
      archive would fail.
    - Removed use of a "ushort" from NufxLib.h.

2004/09/20  fadden
    - Corrected behavior after flush when original archive can't be
      deleted.

2004/09/09  fadden
    - Added header offset and junk offset to NuGetAttr.

2004/08/22  fadden
    - Fixed obscure bug when recompressing a GSHK-added zero-length file
      when "fake threads" is enabled.

2004/03/10  ***** v2.0.2 shipped *****

2004/03/09  fadden
    - Set access permissions based on umask when extracting a "locked"
      file.  My thanks to Matthew Fischer for sending a patch.
    - Reject archives with a MasterEOF == 48, not <= 48.  There are
      some otherwise valid archives created by an old version of ShrinkIt
      that have MasterEOF==0.

2003/10/16  ***** v2.0.1 shipped *****

2003/10/16  fadden
    - Added workaround for bad HFS option lists created by GSHK.
    - Added junk-skipping feature.  Up to 1024 bytes of crud (e.g.
      MacBinary headers or HTTP remnants) will be searched for evidence
      of an archive.

2003/06/19  sheppy
    - Added support for resource forks and file and aux types when built
      for Mac OS X.

2003/03/18  ***** v2.0.0 shipped *****

2003/03/10  fadden
    - Added support for automatic high-ASCII text stripping.

2003/02/23  fadden
    - Added test-twirl to samples.

2003/02/22  fadden
    - Turn off EOL conversion when extracting disk images.