@@ -1,3 +1,9 @@
+2007/02/19  fadden
+    - Auto-detect and handle "bad Mac" archives.
+
+2006/12/02  fadden
+    - Check for overrun when unpacking RLE.
+
 2006/02/18  ***** v2.1.1 shipped *****
 
 2006/02/18  fadden
